# streamlit_test_evan

./: .gitignore  README.md  app.py  app2.py  etl.py  main.py  pyproject.toml  requirements.txt
data/: orders.xlsx
